--- a/sites/framework.html
+++ b/sites/framework.html
@@ -86,34 +86,111 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-6 pt-5 pt-5">
-                    <img src="../images//Framework/ide.png" alt="..." width="450" height="350" class="card-img">
+                    <img src="../images/Framework/ide.png" alt="..." width="450" height="350" class="card-img">
                 </div>
             </div>
         </div>
     		<hr>
-        <h3>Daily Scrum</h3>
+
+        <h3>IDE Android Studio</h3>
+        <div class="card mb-3" style="max-width: 1000px;">
+            <div class="row no-gutters">
+              <div class="col-md-8 pt-5">
+                <img src="../images/Framework/ide02.jpeg" alt="..." width="1000" height="300" class="card-img">
+              </div>
+              <div class="col-md-4">
+                <div class="card-body">
+                    <br/><br/>
+						        <p>Es un entorno de programación empaquetado como un programa
+                    o aplicación, que nos provee de un marco de trabajo agradable
+                    para la mayoría de los lenguajes de programación.<br/>
+                    Dentro de la aplicacion la actividad o activity es el principal
+                    componente que se encarga de manejar una interfaz grafica.</p>
+                    <br/><br/>
+                </div>
+              </div>
+            </div>
+        </div>
 
         <div class="card mb-3" style="max-width: 1000px;">
             <div class="row no-gutters">
-              <div class="col-md-4 pt-5">
-                <img src="../images/Scrum/scrum2.png" alt="..." width="767" height="272" class="card-img">
-              </div>
-              <div class="col-md-8">
+              <div class="col-md-6">
                 <div class="card-body">
-                    <ul>
-						            <p> Todos los días, el equipo realiza una breve reunión
-                        cara a cara llamada Daily Scrum para actualizarse
-                        mutuamente sobre el progreso que han logrado y para
-                        discutir los obstáculos que podrían venir.</p>
-						            <h3> Cada persona responde tres preguntas: </h3>
-                        <br>
-                        <li>¿Qué he hecho desde el último Scrum diario?</li>
-                        <br>
-                        <li>¿Qué haré hasta el próximo Scrum diario?</li>
-                        <br>
-                        <li>¿Qué obstáculos hay en mi camino?</li>
-                    </ul>
+                    <br/><br/>
+                    <h4>Activity</h4>
+                    <br/><br/>
+						        <p>El primer activity y mas relevante es el MainActivity
+                    de clase Java que es el que nos permite controlar las
+                    actividades y hacer que se ejecuten las actividades.</p>
+                    <br/><br/>
+                    <br/><br/>
                 </div>
+              </div>
+              <div class="col-md-6 pt-5">
+                <img src="../images/Framework/activity-java.jpeg" alt="..." width="600" height="300" class="card-img">
+              </div>
+            </div>
+
+            <div class="row no-gutters">
+              <div class="col-md-6 pt-5">
+                <img src="../images/Framework/activity-xml.jpeg" alt="..." width="600" height="200" class="card-img">
+              </div>
+              <div class="col-md-6">
+                <div class="card-body">
+                    <br/><br/>
+						        <p>El segundo activity o de layout que es un archivo xml
+                    donde esta configurado toda la apariencia de los elementos
+                    de la interfaz grafica.<br/>
+                    En este archivo se puede ir agregando ya sean botones, etiquetas
+                    guias, textos, widgets, contenedores para lograr el diseño
+                    esperado.</p>
+                    <br/><br/>
+                </div>
+              </div>
+            </div>
+        </div>
+
+        <div class="card mb-3" style="max-width: 1000px;">
+            <div class="row no-gutters">
+              <div class="col-md-6">
+                <div class="card-body">
+                    <br/><h4>XML</h4><br/>
+						        <p>Dentro del xml podemos usar este modo que es el modo code
+                    en este se encuentran las configuraciones y diseños que realizamos
+                    y aqui se encuentra todo lo que hemos realizado como codigo.</p>
+                    <br/>
+                </div>
+              </div>
+              <div class="col-md-6 pt-5">
+                <img src="../images/Framework/xml-code.jpeg" alt="..." width="600" height="200" class="card-img">
+              </div>
+            </div>
+
+            <div class="row no-gutters">
+              <div class="col-md-6 pt-5">
+                <img src="../images/Framework/xml-split.jpeg" alt="..." width="600" height="200" class="card-img">
+              </div>
+              <div class="col-md-6">
+                <div class="card-body">
+                    <br/><br/><br/>
+						        <p>El modo split nos permite visualizar tanto el codigo como
+                      el diseño que se realiza en la interfaz de manera simultanea.</p>
+                    <br/><br/>
+                </div>
+              </div>
+            </div>
+
+            <div class="row no-gutters">
+              <div class="col-md-6">
+                <div class="card-body">
+                    <br/><br/><br/><br/>
+						        <p>Finalmente el modo Design es el que nos permitira visualizar
+                    el diseño de la interfaz de nuestra aplicacion.</p>
+                    <br/><br/>
+                </div>
+              </div>
+              <div class="col-md-6 pt-5">
+                <img src="../images/Framework/activity-xml.jpeg" alt="..." width="600" height="200" class="card-img">
               </div>
             </div>
         </div>
