--- a/sites/framework.html
+++ b/sites/framework.html
@@ -24,7 +24,7 @@
     <header id="header">
         <a href="../index.html" class="logo"><strong>Aplicaciones Móviles</strong></a>
     </header>
-    <div><a href="sites/entornoMovil.html" style="float: left; background-color: black; padding: 1rem">Anterior</a></div>
+    <div><a href="entornoMovil.html" style="float: left; background-color: black; padding: 1rem">Anterior</a></div>
     <div><a href="../index.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a></div>
     <!-- Main -->
     <section id="main">
@@ -196,7 +196,7 @@
         </div>
     </section>
     <div>
-        <a href="sites/entornoMovil.html" style="float: left; background-color: black; padding: 1rem">Anterior</a>
+        <a href="entornoMovil.html" style="float: left; background-color: black; padding: 1rem">Anterior</a>
         <a href="../index.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a>
     </div>
     <!-- Footer -->
