--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                 </div>
             </div>
         </article>
+
         <!-- cinco -->
         <!--Cambiar id por el numero de clase-->
         <!--Cambiar clase style1 por style2 o style3 para cambiar de color de texto -->
@@ -209,9 +210,7 @@
                 <div class="inner">
                     <header>
                         <!--Apuntar al html con el nombre de la clase-->
-                        <h2>
-                            <a href="sites/scrum.html">Scrum</a>
-                        </h2>
+                        <h2><a href="sites/scrum.html">Scrum</a></h2>
                         <!--Fecha de la clase-->
                         <p class="info">26 de Octubre de 2020</p>
                     </header>
@@ -221,20 +220,14 @@
                     </p>
                     <ul class="actions">
                         <!--Apuntar al html con el nombre de la clase-->
-                        <li>
-                            <a href="sites/scrum.html" class="button alt">Leer Mas</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div class="postnav">
-          <!--Poner el numero de id anterior-->
-          <a href="#cuatro" class="prev disabled"
-            ><span class="icon fa-chevron-up"></span
-          ></a>
-                            <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
-                            <a href="#seis" class="scrolly next"><span class="icon fa-chevron-down"></span
-          ></a>
+                        <li><a href="sites/scrum.html" class="button alt">Leer Mas</a></li>
+                    </ul>
+                </div>
+                <div class="postnav">
+                    <!--Poner el numero de id anterior-->
+                    <a href="#cuatro" class="prev disabled"><span class="icon fa-chevron-up"></span></a>
+                    <!--Poner el numero de id siguiente si no hay poner vacio y revisar que el anterior div apunte a esta clase-->
+                    <a href="#seis" class="scrolly next"><span class="icon fa-chevron-down"></span></a>
                 </div>
             </div>
         </article>
