--- a/sites/agile.html
+++ b/sites/agile.html
@@ -24,7 +24,14 @@
     </header>
 
     <div>
-      <a href="scrum.html" style="float: right; background-color: black; padding: 1rem"
+      <a
+        href="framework.html"
+        style="float: left; background-color: black; padding: 1rem"
+        >Anterior</a
+      >
+      <a
+        href="scrum.html"
+        style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
     </div>
@@ -303,14 +310,21 @@
       </div>
     </section>
     <div>
-      <a href="scrum.html" style="float: right; background-color: black; padding: 1rem"
+      <a
+        href="framework.html"
+        style="float: left; background-color: black; padding: 1rem"
+        >Anterior</a
+      >
+      <a
+        href="scrum.html"
+        style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
     </div>
     <!-- Footer -->
     <footer id="footer">
       <p style="text-align: center !important;">
-        Trabajo del curso de Computación Paralela y Distribuida <br />
+        Trabajo del curso de Aplicaciones Móviles <br />
         <small>Universidad UTE</small>
       </p>
 
