--- a/sites/diseñoydesarrollomovil.html
+++ b/sites/diseñoydesarrollomovil.html
@@ -21,8 +21,8 @@
 			>
 		  </header>
 		  <div>
-			<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-			<a href="Hilos y Sincronizacion.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+			<a href="scrum.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
+			<a href="histomov.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 		  </div>
 
 		<!-- Main -->
@@ -269,13 +269,13 @@ desde el comienzo.</li></p>
 				
 			</section>
 			<div>
-				<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-				<a href="Hilos y Sincronizacion.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+				<a href="scrum.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
+				<a href="histomov.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 			  </div>
 		<!-- Footer -->
 			<footer id="footer">
 				<p>
-					Trabajo del curso de Aplicaciones móviles <br />
+					Trabajo del curso de Aplicaciones Móviles <br />
 					<small>Universidad UTE</small>
 				  </p>
 			
