--- a/sites/framework.html
+++ b/sites/framework.html
@@ -25,7 +25,7 @@
         <a href="../index.html" class="logo"><strong>Aplicaciones Móviles</strong></a>
     </header>
     <div><a href="entornoMovil.html" style="float: left; background-color: black; padding: 1rem">Anterior</a></div>
-    <div><a href="../index.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a></div>
+    <div><a href="agile.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a></div>
     <!-- Main -->
     <section id="main">
       <div class="inner">
@@ -197,12 +197,12 @@
     </section>
     <div>
         <a href="entornoMovil.html" style="float: left; background-color: black; padding: 1rem">Anterior</a>
-        <a href="../index.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a>
+        <a href="agile.html" style="float: right; background-color: black; padding: 1rem">Siguiente</a>
     </div>
     <!-- Footer -->
     <footer id="footer">
       <p  style="text-align: center !important; color:white;">
-        Trabajo del curso de Computación Paralela y Distribuida <br />
+        Trabajo del curso de Aplicaciones Móviles <br />
         <small>Universidad UTE</small>
       </p>
 
