--- a/sites/generic.html
+++ b/sites/generic.html
@@ -109,7 +109,7 @@
     <!-- Footer -->
     <footer id="footer">
       <p>
-        Trabajo del curso de Computación Paralela y Distribuida <br />
+        Trabajo del curso de Aplicaciones Móviles <br />
         <small>Universidad UTE</small>
       </p>
 
