--- a/sites/histomov.html
+++ b/sites/histomov.html
@@ -95,12 +95,12 @@
 
     <div>
       <a
-        href=""
+        href="diseñoydesarrollomovil.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href=""
+        href="layout.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -501,12 +501,12 @@
     </section>
     <div>
       <a
-        href=""
+        href="diseñoydesarrollomovil.html"
         style="float: left; background-color: black; padding: 1rem"
         >Anterior</a
       >
       <a
-        href=""
+        href="layout.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -514,7 +514,7 @@
     <!-- Footer -->
     <footer id="footer">
       <p>
-        Trabajo del curso de Computación Paralela y Distribuida <br />
+        Trabajo del curso de Aplicaciones Móviles <br />
         <small>Universidad UTE</small>
       </p>
 
