--- a/sites/layout.html
+++ b/sites/layout.html
@@ -21,7 +21,16 @@
 			>
 		  </header>
 		  <div>
-			<a href="Estilosytemas.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+			<a
+        href="histomov.html"
+        style="float: left; background-color: black; padding: 1rem"
+        >Anterior</a
+      >
+      <a
+        href="../index.html"
+        style="float: right; background-color: black; padding: 1rem"
+        >Siguiente</a
+      >
 		  </div>
 
 		<!-- Main -->
@@ -242,19 +251,28 @@
 </section>
 			<div>
 				
-				<a href="Estilosytemas.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+				<a
+        href="histomov.html"
+        style="float: left; background-color: black; padding: 1rem"
+        >Anterior</a
+      >
+      <a
+        href="../index.html"
+        style="float: right; background-color: black; padding: 1rem"
+        >Siguiente</a
+      >
 			  </div>
 		<!-- Footer -->
-			<footer id="footer">
-				<p>
-					Trabajo del curso de Aplicaciones móviles <br />
-					<small>Universidad UTE</small>
-				  </p>
-			
-				  <div class="copyright">
-					Design: <a href="https://templated.co">TEMPLATED</a>
-				  </div>
-			</footer>
+		<footer id="footer">
+			<p style="color: white;">
+			  Trabajo del curso de Aplicaciones Móviles <br />
+			  <small>Universidad UTE</small>
+			</p>
+	  
+			<div class="copyright">
+			  Design: <a href="https://templated.co">TEMPLATED</a>
+			</div>
+		  </footer>
 
 		<!-- Scripts -->
 			<script src="../assets/js/jquery.min.js"></script>
