--- a/sites/layout.html
+++ b/sites/layout.html
@@ -27,7 +27,7 @@
         >Anterior</a
       >
       <a
-        href="../index.html"
+        href="Estilosytemas.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
@@ -257,7 +257,7 @@
         >Anterior</a
       >
       <a
-        href="../index.html"
+        href="Estilosytemas.html"
         style="float: right; background-color: black; padding: 1rem"
         >Siguiente</a
       >
