--- a/sites/estado.html
+++ b/sites/estado.html
@@ -21,8 +21,8 @@
 			>
 		  </header>
 		  <div>
-			<a href="../index.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-			<a href="" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+			<a href="ciclo_de_vida.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
+			<a href="../index.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 		  </div>
 
 		<!-- Main -->
@@ -414,7 +414,7 @@ objeto LiveData observable.</p>
 			</section>
 			<div>
 				<a href="ciclo_de_vida.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-				<a href="" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+				<a href="../index.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 			  </div>
 		<!-- Footer -->
 			<footer id="footer">
