--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <article id="tres" class="post invert style2 alt">
       <div class="image">
         <img
-          src="images/4.jpg"
+          src="images/Agile/poster.png"
           alt=""
           width="70%"
           height="159"
