--- a/sites/Arquitecturadeinformacionmovil.html
+++ b/sites/Arquitecturadeinformacionmovil.html
@@ -22,7 +22,7 @@
 		  </header>
 		  <div>
 			<a href="diseñoydesarrollomovil.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-			<a href="../index.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+			<a href="histomov.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 		  </div>
 
 		<!-- Main -->
@@ -104,8 +104,8 @@ Como el usuario obtendrá información o realizará tareas dentro de un sitio we
 
     <td>El diseño visual de la información o cómo el usuario evaluará el significado y la dirección.</td>
 
-    <td>Las palabras utilizadas para describir los espacios de información, etiquetas con el fin de mostrar al usuario lo que encontrará.
-</td>
+    <td><p align="justify">Las palabras utilizadas para describir los espacios de información, etiquetas con el fin de mostrar al usuario lo que encontrará.
+</p></td>
 
 <td>El diseño de los paradigmas visuales utilizados para crear acción o comprensión.
 </td>
@@ -138,7 +138,7 @@ El elemento más crucial de su producto:
       <div class="card-body">
         <h5 class="card-title">Arquitectura de información Movil</h5>
         
-        <p class="card-text">Encontrar la estructura que mejor ayude al usuario a asimilar el contenido de nuestro producto. Es por ello, que esto se realiza no sólo al principio del desarrollo, sino siempre y cuando necesitemos redefinir estos patrones. Por ejemplo: en varias ocasiones he mencionado que las modas van cambiando en cuanto a diseños.
+        <p class="card-text" align="justify">Encontrar la estructura que mejor ayude al usuario a asimilar el contenido de nuestro producto. Es por ello, que esto se realiza no sólo al principio del desarrollo, sino siempre y cuando necesitemos redefinir estos patrones. Por ejemplo: en varias ocasiones he mencionado que las modas van cambiando en cuanto a diseños.
  </p>
         
       </div>
@@ -147,7 +147,7 @@ El elemento más crucial de su producto:
 </div>
 
 <h2>Etiquetas claras y sencillas</h2>
-<p>Las buenas etiquetas de activación, las palabras que usamos para describir cada vínculo o acción, son cruciales en el móvil, al igual que en la web</p>
+<p align="justify">Las buenas etiquetas de activación, las palabras que usamos para describir cada vínculo o acción, son cruciales en el móvil, al igual que en la web</p>
 <table class="egt">
 
   <tr>
@@ -162,14 +162,14 @@ El elemento más crucial de su producto:
 
   <tr>
 
-    <td>Representan visualmente la relación del contenido con otro contenido y proporcionar un mapa de cómo viaja el usuario a través del espacio informativo
-</td>
+    <td><p align="justify">Representan visualmente la relación del contenido con otro contenido y proporcionar un mapa de cómo viaja el usuario a través del espacio informativo
+</p></td>
 
-    <td>Si van por el camino equivocado, inmediatamente pueden hacer clic para volver a donde empezaron e ir por otro camino, eliminando las opciones incorrectas para encontrar las correctas. los los riesgos de tomar una decisión incorrecta son menores.
-</td>
+    <td><p align="justify">Si van por el camino equivocado, inmediatamente pueden hacer clic para volver a donde empezaron e ir por otro camino, eliminando las opciones incorrectas para encontrar las correctas. los los riesgos de tomar una decisión incorrecta son menores.
+</p></td>
 
-    <td>Los sitios y aplicaciones con mucha información a menudo emplean o arquitecturas de desglose, lo que obliga al usuario a seleccionar categoría tras categoría para llegar a su objetivo.
-</td>
+    <td><p align="justify">Los sitios y aplicaciones con mucha información a menudo emplean o arquitecturas de desglose, lo que obliga al usuario a seleccionar categoría tras categoría para llegar a su objetivo.
+</p></td>
 
   </tr>
 
@@ -284,7 +284,7 @@ Para presentar la cantidad máxima de información en la parte superior del "pli
 			</section>
 			<div>
 				<a href="diseñoydesarrollomovil.html" style="float:left; background-color: black; padding: 1rem;">Anterior</a>
-				<a href="../index.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
+				<a href="histomov.html" style="float: right; background-color: black; padding: 1rem;">Siguiente</a>
 			  </div>
 		<!-- Footer -->
 			<footer id="footer">
