--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     <!-- ocho -->
     <!--Cambiar id por el numero de clase-->
     <!--Cambiar clase style1 por style2 o style3 para cambiar de color de fondo -->
-    <article id="ocho" class="post invert style2 alt">
+    <article id="ocho" class="post style2">
       <div class="image">
         <img
           src="images/VistasConAdaptadores/1.png"
